--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #6d83d7;
+      background-color: #ffffff;
       font-family: "Helvetica,Arial,FreeSans";
       color: #000000;
     }
