Point to Webbit Google Group

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     </div>
 
     <h2>Contact</h2>
-<p>Joe Walnes (joe@walnes.com)<br/>      </p>
+<p><a href="http://groups.google.com/group/webbit">Webbit Google Group</a>
+<br/>      </p>
 
 
     <h2>Download</h2>
