Added @webbitserver on twitter link

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
     <h2>Contact</h2>
 <p><a href="http://groups.google.com/group/webbit">Webbit Google Group</a>
+<p><a href="http://twitter.com/webbitserver">@webbitserver on Twitter</a>
 <br/>      </p>
 
 
