Give the <script> tag a type

--- a/src/test/java/samples/eventsource/content/index.html
+++ b/src/test/java/samples/eventsource/content/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>EventSource Demo</title>
-    <script>
+    <script type="text/javascript">
         function logText(msg) {
             var textArea = document.getElementById('data');
             textArea.value = textArea.value + msg + '\n';
