--- a/src/test/java/samples/flashchatroom/content/index.html
+++ b/src/test/java/samples/flashchatroom/content/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Chat room</title>
         <link rel="stylesheet" type="text/css" href="chatroom.css">
+        <script type="text/javascript" src="swfobject.js"></script>
+        <script type="text/javascript" src="web_socket.js"></script>
         <script type="text/javascript" src="chatroom.js"></script>
     </head>
     <body>
