--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>joewalnes/webbit @ GitHub</title>
+  <title>webbit/webbit @ GitHub</title>
 
   <style type="text/css">
     body {
@@ -31,18 +31,18 @@
 </head>
 
 <body>
-  <a href="http://github.com/joewalnes/webbit"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  <a href="http://github.com/webbit/webbit"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
   <div id="container">
 
     <div class="download">
-      <a href="http://github.com/joewalnes/webbit/zipball/master">
+      <a href="http://github.com/webbit/webbit/zipball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/joewalnes/webbit/tarball/master">
+      <a href="http://github.com/webbit/webbit/tarball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/joewalnes/webbit">webbit</a>
+    <h1><a href="http://github.com/webbit/webbit">webbit</a>
       <span class="small">by <a href="http://github.com/joewalnes">joewalnes</a></span></h1>
 
     <div class="description">
@@ -58,16 +58,16 @@
     <h2>Download</h2>
     <p>
       You can download this project in either
-      <a href="http://github.com/joewalnes/webbit/zipball/master">zip</a> or
-      <a href="http://github.com/joewalnes/webbit/tarball/master">tar</a> formats.
+      <a href="http://github.com/webbit/webbit/zipball/master">zip</a> or
+      <a href="http://github.com/webbit/webbit/tarball/master">tar</a> formats.
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
-      <pre>$ git clone git://github.com/joewalnes/webbit</pre>
+      <pre>$ git clone git://github.com/webbit/webbit</pre>
     </p>
 
     <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/joewalnes/webbit">joewalnes/webbit</a>
+      get the source code on GitHub : <a href="http://github.com/webbit/webbit">webbit/webbit</a>
     </div>
 
   </div>
