--- a/index.html
+++ b/index.html
@@ -46,14 +46,8 @@
       <span class="small">by <a href="http://github.com/joewalnes">joewalnes</a></span></h1>
 
     <div class="description">
-      A Java event based WebSocket and HTTP server
+      An event-based WebSocket and HTTP server in Java
     </div>
-
-    <h2>Contact</h2>
-<p><a href="http://groups.google.com/group/webbit">Webbit Google Group</a>
-<p><a href="http://twitter.com/webbitserver">@webbitserver on Twitter</a>
-<br/>      </p>
-
 
     <h2>Download</h2>
     <p>
@@ -61,17 +55,30 @@
       <a href="http://github.com/webbit/webbit/zipball/master">zip</a> or
       <a href="http://github.com/webbit/webbit/tarball/master">tar</a> formats.
     </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
+    <p>
+      You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
       <pre>$ git clone git://github.com/webbit/webbit</pre>
     </p>
+    
+    <h2>Contact</h2>
+    <ul>
+      <li>
+        <a href="http://groups.google.com/group/webbit">Webbit Google Group</a>
+      </li>
+      <li>
+        <a href="http://twitter.com/webbitserver">@webbitserver on Twitter</a>
+      </li>
+      <li>
+        <a href="https://github.com/webbit/webbit/wiki">Webbit Wiki</a>
+      </li>
+    </ul>
 
     <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/webbit/webbit">webbit/webbit</a>
+      Get the source code from GitHub: <a href="http://github.com/webbit/webbit">webbit/webbit</a>
     </div>
 
   </div>
-
   
 </body>
 </html>
