StaticFileHandler: introducing cache control headers - add ETags - add Cache-Control (optional) - add Last-Modified - handle -If-Modified-Since - add swf Content-Type - upgrade flashchatroom example

--- a/src/test/java/samples/flashchatroom/content/index.html
+++ b/src/test/java/samples/flashchatroom/content/index.html
@@ -4,6 +4,11 @@
         <title>Chat room</title>
         <link rel="stylesheet" type="text/css" href="chatroom.css">
         <script type="text/javascript" src="swfobject.js"></script>
+        <script type="text/javascript">
+            // web-socket-js 
+            window.WEB_SOCKET_SWF_LOCATION = "WebSocketMain.swf";
+            window.WEB_SOCKET_DEBUG = true;
+        </script>
         <script type="text/javascript" src="web_socket.js"></script>
         <script type="text/javascript" src="chatroom.js"></script>
     </head>
